--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 	<div>
   <image src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" height="200px"/> 
 	<a href="https://acciojob.com/blog/untitled-19/">Complete Guide on FlexBox</a>
-	 <p>As a job seeker, you may wonder...</p> 
+	 <br> <p>As a job seeker, you may wonder...</p> 
 	  </div>
 	  <script type="text/javascript" src="./script.js">
 </script>
